<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_a_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/team_a_text"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20sp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/team_a_score"
                    android:textColor="@android:color/black"
                    android:textSize="100sp" />

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/team_a_serve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_style_1"
                android:onClick="serveForTeamA"
                android:text="@string/serve"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a_hit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_syle_2"
                android:onClick="hitForTeamA"
                android:text="@string/hit"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a_floor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_style_3"
                android:onClick="floorForTeamA"
                android:text="@string/floor"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a_stroke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_style_4"
                android:onClick="strokeForTeamA"
                android:text="@string/stroke"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_a_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_style_5"
                android:onClick="outForTeamA"
                android:text="@string/ball_out"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_b_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/team_b_text"
                android:textColor="@android:color/primary_text_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/team_b_score"
                    android:textColor="@android:color/black"
                    android:textSize="100sp" />


            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/team_b_serve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_style_1"
                android:onClick="serveForTeamB"
                android:text="@string/serve"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b_hit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_syle_2"
                android:onClick="hitForTeamB"
                android:text="@string/hit"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b_floor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_style_3"
                android:onClick="floorForTeamB"
                android:text="@string/floor"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b_stroke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_style_4"
                android:onClick="strokeForTeamB"
                android:text="@string/stroke"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/team_b_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_style_5"
                android:onClick="outForTeamB"
                android:text="@string/ball_out"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/reset"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_style_6"
        android:onClick="resetScore"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/reset_scores"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>