<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scoreCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/goto_home_style"
        app:cardBackgroundColor="#000000"
        app:cardCornerRadius="10dp"
        app:cardElevation="16sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/winner_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:background="@drawable/score_card_style"
                android:paddingTop="24sp"
                android:paddingBottom="24sp"
                android:text="@string/winner_text"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="14dp"
                android:background="@drawable/score_card_style"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/country_a_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/team_a_text"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/div1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/country_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/team_a_score"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="48sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:id="@+id/div2"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/country_b_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/team_b_text"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/div3"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/country_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/team_b_score"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="48sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="24sp"
        android:background="@drawable/goto_home_style"
        android:fontFamily="casual"
        android:padding="10dp"
        android:text="@string/go_to_home"
        android:textColor="#EEFF41"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>