<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".ChooserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/slackey"
                android:text="@string/team_a_text"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/card_style"
                android:dropDownSelector="#E0E0E0"
                android:overlapAnchor="false"
                android:popupBackground="@drawable/card_style" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="2dp"
            android:layout_height="130dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/slackey"
                android:text="@string/team_b_text"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/card_style"
                android:dropDownSelector="#E0E0E0"
                android:overlapAnchor="false"
                android:popupBackground="@drawable/card_style" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/play_style"
        android:drawableEnd="@drawable/play"
        android:drawablePadding="4dp"
        android:fontFamily="@font/slackey"
        android:padding="16dp"
        android:text="@string/tap_to_play"
        android:textAllCaps="false"
        android:textSize="16sp" />
</RelativeLayout>